<resources>
    <string name="app_name">Dental Job Video</string>
    <string name="current_version">1.0.0</string>
    <string name="header_done_text">Done</string>
    <string name="header_next_text">Next</string>
    <string name="header_apply_text">Apply</string>
    <string name="header_post_job_text">Post Job</string>
    <string name="login_text">LOGIN</string>
    <string name="login_type_hint">JOB SEEKER</string>
    <string name="login_username_hint">USERNAME or EMAIL</string>
    <string name="login_password_hint">PASSWORD</string>
    <string name="login_forget_password"><u>Forget Password?</u></string>
    <string name="login_remember_me">Remember me</string>
    <string-array name="login_user_type">
        <item name="job_seeker">JOB SEEKER</item>
        <item name="employer">EMPLOYER</item>
    </string-array>
    <string name="login_spinner_text">ACCOUNT TYPE</string>
    <string name="dashboard_text">DASHBOARD</string>
    <string name="signup_account_type_text">ACCOUNT TYPE</string>
    <string name="signup_title">SIGN UP</string>
    <string name="signup_username_hint">USER NAME</string>
    <string name="signup_firstname_hint">FIRST NAME</string>
    <string name="signup_lastname_hint">LAST NAME</string>
    <string name="signup_email_hint">EMAIL</string>
    <string name="signup_confirm_email_hint">CONFIRM EMAIL</string>
    <string name="signup_password_hint">PASSWORD</string>
    <string name="signup_confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="signup_select_your_speciality_hint">SELECT YOUR SPECIALITY</string>
    <string name="signup_select_date_of_birth">DATE OF BIRTH</string>
    <string name="signup_gender_hint">GENDER</string>
    <string name="signup_month_hint">MONTH</string>
    <string name="signup_year_hint">YEAR</string>
    <string name="signup_day_hint">DAY</string>
    <string name="signup_country_hint">COUNTRY</string>
    <string name="signup_state_hint">STATE</string>
    <string name="signup_companyname_hint">COMPANY NAME</string>
    <string name="signup_companydescription_hint">COMPANY DESCRIPTION :</string>
    <string name="signup_companywebsite_hint">COMPANY WEBSITE</string>
    <string name="signup_operatingsince_hint">OPERATING SINCE</string>
    <string name="signup_address_hint">ADDRESS :</string>
    <string name="signup_city_hint">CITY</string>
    <string name="signup_zip_hint">ZIP CODE</string>
    <string name="signup_phone_hint">+1 PHONE NUMBER</string>
    <string-array name="signup_gender_type">
        <item name="gender_male">Male</item>
        <item name="gender_female">Female</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_job_search">Job Search</string>
    <string name="nav_view_profile">View Profile</string>
    <string name="nav_messages_js">Messages</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_manager_videos_js">Manage Videos</string>
    <string name="nav_myjobs">My Jobs</string>
    <string name="nav_hiddenjobs">Hidden Jobs</string>
    <string name="nav_settings_js">Settings</string>
    <string name="nav_jobs">Jobs</string>
    <string name="nav_company_profile">Company Profile</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_hidden_resume">Hidden Resume</string>
    <string name="nav_manager_videos">Manage Videos</string>
    <string name="nav_top_5">Top 5</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_job_seeker">Job Seeker</string>
    <string-array name="nav_item_employer_activity_titles">
        <item>Jobs</item>
        <item>Company Profile</item>
        <item>Messages</item>
        <item>Hidden Resume</item>
        <item>Manage Videos</item>
        <item>Top 5</item>
        <item>Job Seeker</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_item_jobseeker_activity_titles">
        <item>Job Search</item>
        <item>View Profile</item>
        <item>Messages</item>
        <item>My Jobs</item>
        <item>Manage Videos</item>
        <item>Bookmarks</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_manage_video">Manage Video</string>
    <string name="company_profile_fragment">Company Profile</string>
    <string name="manage_video_fragment">Manage Videos</string>
    <string name="messages_fragment">Messages</string>
    <string name="jobs_fragment">Jobs</string>
    <string name="hidden_resume_fragment">Hidden Resume</string>
    <string name="settings_fragment">Settings</string>
    <string name="top5_fragment">Top 5</string>
    <string name="jobseeker_fragment">Job Seekers</string>
    <string name="job_search_fragment">Job Search</string>
    <string name="myjobs_fragment">My Jobs</string>
    <string name="hidden_job_fragment">Hidden Jobs</string>
    <string name="view_profile_fragment">My Profile</string>
    <string name="bookmark_fragment">Bookmark</string>
    <string name="company_profile_username_hint">Cerebrum Medical Center</string>
    <string name="company_profile_description_hint">Lorem Ipsum is the simple dummy text of the printing and typesetting industry. Lorem Epsume has been the industry standard</string>
    <string name="company_profile_label_email">Email</string>
    <string name="company_profile_label_country">Country</string>
    <string name="company_profile_label_state">State</string>
    <string name="company_profile_label_city">City</string>
    <string name="company_profile_label_phone_number">Phone Number</string>
    <string name="company_profile_label_speciality">Speciality</string>
    <string name="company_profile_label_website">Company Website</string>
    <string name="company_profile_label_operating">Operating Since</string>
    <string name="company_profile_label_address">Address</string>
    <string name="company_profile_label_email_hint">info@cerberummedical.com</string>
    <string name="company_profile_label_country_hint">USA</string>
    <string name="company_profile_label_state_hint">dummy</string>
    <string name="company_profile_label_city_hint">New York</string>
    <string name="company_profile_label_phone_number_hint">+1-222-2222224</string>
    <string name="company_profile_label_speciality_hint">Dentist</string>
    <string name="company_profile_label_website_hint">www.cerebrummedical.com</string>
    <string name="company_profile_label_operating_hint">12/02/2014</string>
    <string name="company_profile_label_address_hint">Dummy Address Here</string>
    <string name="job_video_title_text">Title :</string>
    <string name="job_video_Description_hint">Description :</string>
    <string name="job_video_Location_hint">Location :</string>
    <string name="job_video_Category_text">Category :</string>
    <string name="job_text_experience_hint">Experience Required :</string>
    <string name="job_text_educated_hint">Education Required :</string>
    <string name="job_text_joining_date_hint">Expected Date of Joining :</string>
    <string name="job_text_salary_hint">Salary Expected :</string>
    <string name="job_text_place_hint">Location :</string>
    <string name="job_text_category_hint">Category :</string>
    <string name="job_posted_activity_title">JOB</string>
    <string name="job_posted_info_title_dummytext">Dentist</string>
    <string name="job_posted_info_desc_dummytext">Dummy text of the printing and typesetting industry</string>
    <string name="job_posted_info_experience">Experience Required</string>
    <string name="job_posted_info_education">Education Required</string>
    <string name="job_posted_info_joining_date">Expected Date of Joining</string>
    <string name="job_posted_info_salary">Salary Expected</string>
    <string name="job_posted_info_place">Place</string>
    <string name="job_posted_info_category">Category</string>
    <string name="job_posted_info_experience_dummy_text">4 years</string>
    <string name="job_posted_info_education_dummy_text">BS</string>
    <string name="job_posted_info_joining_date_dummy_text">12-12-2014</string>
    <string name="job_posted_info_salary_dummy_text">50.000</string>
    <string name="job_posted_info_place_dummy_text">USA</string>
    <string name="job_posted_info_category_dummy_text">Dentist</string>
    <string name="hidden_resume_item_desc_dummytext">This is the preview of the message which display on two line and continues...</string>
    <string name="top5_profile_activity_dummytitle">Estest Khuska</string>
    <string name="top5_profile_activity_dummydetail">Dummy text of the printing and</string>
    <string name="top5_profile_activity_dummyexperience">4 years</string>
    <string name="top5_profile_activity_add_note_title">NOTE</string>
    <string name="top5_profile_activity_add_note_hint">Add Note</string>
    <string name="fragment_setting_logout">Logout</string>
    <string name="fragment_setting_notification">Notification</string>
    <string name="fragment_setting_changepassword">Change Password</string>
    <string name="fragment_setting_restorepurchase">Restore Purchase</string>
    <string name="fragment_setting_privacypolicy">Privacy Policy</string>
    <string name="fragment_setting_termsandcondtion">Terms &amp; Conditions</string>
    <string name="change_password_header_title">CHANGE PASSWORD</string>
    <string name="change_password_oldpassword_hint">Old Password</string>
    <string name="change_password_newpassword_hint">New Password</string>
    <string name="change_password_confirmpassword_hint">Confirm Password</string>
    <string name="change_passord_button_cancel">Cancel</string>
    <string name="change_passord_button_submit">Submit</string>
    <string name="forget_password_header_title">FORGET PASSWORD</string>
    <string name="forget_password_email_hint">user@email.com</string>
    <string name="forget_password_text">Enter your email address to request a password reset.</string>
    <string name="forget_passord_button_cancel">Cancel</string>
    <string name="forget_passord_button_request">Request</string>
    <string name="title_activity_navigation_drawer_job_seeker">NavigationDrawerJobSeekerActivity
    </string>
    <string name="job_search_search_hint">Search</string>
    <string name="job_search_filter">Filter</string>
    <string name="job_search_option_list">List</string>
    <string name="job_search_option_map">Map</string>
    <string name="location_not_enabled">Location is off</string>
    <string name="enable_location">Want to Enable?</string>
    <string name="location_yes">Yes</string>
    <string name="location_no">No</string>
    <string name="apply_job_header_title">CONFIRMATION</string>
    <string name="apply_job_confirmation">Would you like to apply to this job?</string>
    <string name="apply_job_yes">Yes</string>
    <string name="apply_job_no">No</string>
    <string name="view_profile_info_username_dummy">Estes</string>
    <string name="view_profile_info_field_dummy">Dentist</string>
    <string name="view_profile_info_company_dummy">Cerebrum</string>
    <string name="view_profile_contact">CONTACT</string>
    <string name="view_profile_contact_detail_username">Username:</string>
    <string name="view_profile_contact_detail_location">Location:</string>
    <string name="view_profile_contact_detail_email">Email:</string>
    <string name="view_profile_contact_detail_phone">Phone:</string>
    <string name="view_profile_contact_detail_zipcode">Zipcode:</string>
    <string name="menu_chat_info">Chat info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="action_start_video_call">Video call</string>
</resources>