<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/menu_jobs"
            android:title="@string/nav_jobs" />
        <item
            android:id="@+id/nav_company_profile"
            android:icon="@drawable/menu_company_profile"
            android:title="@string/nav_company_profile" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/menu_messages"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_hidden_resume"
            android:icon="@drawable/menu_hidden_resume"
            android:title="@string/nav_hidden_resume"
            />
        <item
            android:id="@+id/nav_manage_videos"
            android:icon="@drawable/menu_manage_video"
            android:title="@string/nav_manager_videos" />
        <item
            android:id="@+id/nav_top5"
            android:icon="@drawable/menu_top5"
            android:title="@string/nav_top_5" />
        <item
            android:id="@+id/nav_job_seeker"
            android:icon="@drawable/menu_job_seeker"
            android:title="@string/nav_job_seeker" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/menu_settings"
            android:title="@string/nav_settings" />

    </group>



</menu>
