<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/start_video_call"
        android:title="@string/action_start_video_call"
        android:icon="@mipmap/ic_videocam"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/start_audio_call"
        android:title="@string/action_start_video_call"
        android:icon="@mipmap/ic_call_grey"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_chat_action_info"
        android:title="@string/menu_chat_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_action_add"
        android:title="@string/menu_add_users_to_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_action_leave"
        android:title="@string/menu_leave_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_action_delete"
        android:title="@string/menu_delete_chat"
        app:showAsAction="never" />
</menu>
