<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up_job_employee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="com.vishant.DentalJobVideo.activity.employeer.SignUpJobEmployeeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/header_layout_total_height"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/jobseeker_signup_panel"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/signup_field_bottommargin"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:id="@+id/signup_user_image_iv_layout"
                android:layout_marginTop="@dimen/signup_image_top_margin"
                android:layout_width="@dimen/signup_image_size"
                android:layout_height="@dimen/signup_image_size">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/signup_user_image_iv"
                    android:layout_margin="@dimen/signup_image_padding"
                    app:civ_border="false"
                    app:civ_border_width="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/signup_user_image_iv_border"
                    android:background="@mipmap/ic_image_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/signup_username_tv"
                android:layout_below="@+id/signup_user_image_iv_layout"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_username_hint"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/login_field_left_padding"
                android:paddingRight="@dimen/login_field_left_padding"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/signup_field_textsize"
                android:textColor="@color/signup_text_color"
                android:textColorHint="@color/signup_text_hint_color"
                android:layout_marginLeft="@dimen/signup_field_margin"
                android:layout_marginRight="@dimen/signup_field_margin"
                android:layout_marginTop="@dimen/signup_username_topmargin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signup_field_size" />

            <EditText
                android:id="@+id/signup_firstname_tv"
                android:layout_below="@+id/signup_username_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_firstname_hint"
                style="@style/signup_field_style"/>

            <EditText
                android:id="@+id/signup_lastname_tv"
                android:layout_below="@+id/signup_firstname_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_lastname_hint"
                style="@style/signup_field_style"/>

            <EditText
                android:id="@+id/signup_email_tv"
                android:layout_below="@+id/signup_lastname_tv"
                android:background="@mipmap/text_field"
                android:inputType="textEmailAddress"
                android:hint="@string/signup_email_hint"
                style="@style/signup_field_style"/>

            <EditText
                android:id="@+id/signup_password_tv"
                android:layout_below="@+id/signup_email_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_password_hint"
                android:inputType="textPassword"
                style="@style/signup_field_style"/>
            <EditText
                android:id="@+id/signup_confirmpassword_tv"
                android:layout_below="@+id/signup_password_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_confirm_password_hint"
                android:inputType="textPassword"
                style="@style/signup_field_style"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/signup_select_speciality_sp"
                android:layout_below="@+id/signup_confirmpassword_tv"
                android:background="@mipmap/dropdown_text_feild"
                android:spinnerMode="dialog"
                android:prompt="@string/signup_select_your_speciality_hint"
                style="@style/signup_field_style"/>
            <EditText
                android:id="@+id/signup_companyname_tv"
                android:layout_below="@+id/signup_select_speciality_sp"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_companyname_hint"
                style="@style/signup_field_style"/>

            <EditText
                android:id="@+id/signup_companydescription_tv"
                android:layout_below="@+id/signup_companyname_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_companydescription_hint"
                style="@style/signup_field_large_style"/>
            <EditText
                android:id="@+id/signup_companywebsite_tv"
                android:layout_below="@+id/signup_companydescription_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_companywebsite_hint"
                style="@style/signup_field_style"/>
            <TextView
                android:id="@+id/signup_operatingsince_tv"
                android:layout_below="@+id/signup_companywebsite_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_operatingsince_hint"
                style="@style/signup_field_style"/>

            <EditText
                android:id="@+id/signup_address_tv"
                android:layout_below="@+id/signup_operatingsince_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_address_hint"
                style="@style/signup_field_large_style"/>


            <LinearLayout
                android:id="@+id/signup_state_city_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/signup_field_topmargin"
                android:layout_marginLeft="@dimen/signup_field_margin"
                android:layout_marginRight="@dimen/signup_field_margin"
                android:layout_below="@+id/signup_select_country_sp"
                android:weightSum="2"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:id="@+id/signup_select_state_sp"
                    android:background="@mipmap/dropdown_feild_3"
                    android:prompt="@string/signup_state_hint"
                    android:layout_marginRight="@dimen/signup_half_field_margin"
                    style="@style/signup_half_field_style">
                </android.support.v7.widget.AppCompatSpinner>
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_weight="1"
                    android:id="@+id/signup_select_city_sp"
                    android:spinnerMode="dialog"
                    android:background="@mipmap/dropdown_feild_3"
                    android:prompt="@string/signup_city_hint"
                    android:layout_marginLeft="@dimen/signup_half_field_margin"
                    style="@style/signup_half_field_style">
                </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>
            <EditText
                android:id="@+id/signup_zipcode_tv"
                android:inputType="number"
                android:layout_below="@+id/signup_state_city_layout"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_zip_hint"
                style="@style/signup_field_style"/>
            <EditText
                android:id="@+id/signup_phonenumber_tv"
                android:inputType="phone"
                android:layout_below="@+id/signup_zipcode_tv"
                android:background="@mipmap/text_field"
                android:hint="@string/signup_phone_hint"
                style="@style/signup_field_style"/>
            <Button
                android:id="@+id/signup_sign_up_btn"
                android:layout_below="@+id/signup_phonenumber_tv"
                android:background="@mipmap/sign_up_button"
                style="@style/signup_button_style"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/signup_select_country_sp"
                android:background="@mipmap/dropdown_text_feild"
                android:prompt="@string/signup_country_hint"
                android:spinnerMode="dialog"
                style="@style/signup_field_style"
                android:layout_below="@+id/signup_address_tv"
                android:layout_marginTop="15dp" />

        </RelativeLayout>
    </ScrollView>

    <include layout="@layout/top_header_layout"
        android:id="@+id/signup_header" />
</RelativeLayout>
