<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/pop_up"
    android:layout_width="@dimen/change_password_dialog_width"
    android:layout_height="@dimen/change_password_dialog_height">

    <TextView
        android:id="@+id/change_password_header_title"
        android:textColor="@color/header_text_color"
        android:layout_centerHorizontal="true"
        android:text="@string/change_password_header_title"
        android:layout_marginTop="@dimen/change_password_header_topmargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/change_password_oldpassword"
        android:hint="@string/change_password_oldpassword_hint"
        android:layout_below="@+id/change_password_header_title"
        style="@style/change_password_dialog"/>
    <EditText
        android:id="@+id/change_password_newpassword"
        android:hint="@string/change_password_newpassword_hint"
        android:layout_below="@+id/change_password_oldpassword"
        style="@style/change_password_dialog"/>
    <EditText
        android:id="@+id/change_password_confirmpassword"
        android:hint="@string/change_password_confirmpassword_hint"
        style="@style/change_password_dialog"
        android:layout_below="@+id/change_password_newpassword" />

    <RelativeLayout
        android:id="@+id/change_password_button_layout"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/pop_up_button"
        android:layout_height="@dimen/change_password_button_height">
        <TextView
            android:id="@+id/change_password_button_cancel"
            android:layout_alignParentLeft="true"
            android:text="@string/change_passord_button_cancel"
            android:gravity="center"
            android:textSize="@dimen/change_password_button_text_size"
            android:layout_width="@dimen/change_password_button_width"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/change_password_button_submit"
            android:text="@string/change_passord_button_submit"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/change_password_button_text_size"
            android:layout_width="@dimen/change_password_button_width"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/change_password_button_seperator"
            android:background="@mipmap/button_seperator"
            android:layout_width="1dp"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent" />
    </RelativeLayout>


</RelativeLayout>