<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/pop_up"
    android:layout_width="@dimen/forget_password_dialog_width"
    android:layout_height="@dimen/forget_password_dialog_height">

    <TextView
        android:id="@+id/forget_password_header_title"
        android:textColor="@color/header_text_color"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_password_header_title"
        android:layout_marginTop="@dimen/change_password_header_topmargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forget_password_text"
        android:textColor="@color/header_text_color"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/forget_password_field_margin"
        android:paddingRight="@dimen/forget_password_field_margin"
        android:lines="2"
        android:textAlignment="center"
        android:layout_below="@+id/forget_password_header_title"
        android:text="@string/forget_password_text"
        android:layout_marginTop="@dimen/forget_password_text_topmargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/forget_password_email"
        android:hint="@string/forget_password_email_hint"
        android:layout_below="@+id/forget_password_text"
        style="@style/change_password_dialog"/>


    <RelativeLayout
        android:id="@+id/forget_password_button_layout"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/pop_up_button"
        android:layout_height="@dimen/forget_password_button_height">
        <TextView
            android:id="@+id/forget_password_button_cancel"
            android:layout_alignParentLeft="true"
            android:text="@string/forget_passord_button_cancel"
            android:gravity="center"
            android:textSize="@dimen/change_password_button_text_size"
            android:layout_width="@dimen/forget_password_button_width"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/forget_password_button_request"
            android:text="@string/forget_passord_button_request"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/change_password_button_text_size"
            android:layout_width="@dimen/forget_password_button_width"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/forget_password_button_seperator"
            android:background="@mipmap/button_seperator"
            android:layout_width="1dp"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent" />
    </RelativeLayout>


</RelativeLayout>